--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.4",
     "@radix-ui/react-slot": "^1.2.4",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.4.2",
-    "@types/three": "^0.181.0",
     "@uiw/react-codemirror": "^4.25.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "konva": "10.0.12",
     "lucide-react": "^0.556.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-konva": "19.2.1",
     "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.181.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
